--- a/dictatejs/demos/mob.html
+++ b/dictatejs/demos/mob.html
@@ -50,7 +50,7 @@
 <textarea id="trans" rows="5" style="width:100%; margin-top:.5em">
 </textarea>
 
-<p id="servers" name="servers"></p>
+<p id="server" name="server"></p>
 
 <hr/>
 
