Changes to show output of console.log statements on the execution window

--- a/dictatejs/demos/mob.html
+++ b/dictatejs/demos/mob.html
@@ -55,7 +55,10 @@
 
 <p id="server" name="server"><b></b></p>
 <p><font color="blue"><i>Words Recognized </i></font></p>
-<textarea id="recognizedWords" rows="1" style="width:100%;">
+<textarea id="recognizedWords" rows="1" style="width:100%;margin-bottom:.5em">
+</textarea>
+<p><font color="green"><b>Execution Results</b></font></p>
+<textarea id="exec" rows="3" style="width:100%;">
 </textarea>
 <hr/>
 
