--- a/dictatejs/demos/mob.html
+++ b/dictatejs/demos/mob.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Kaarel Kaljurand">
 
-    <title>dictate.js demo</title>
+    <title>Talk Code</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
